[gd_scene load_steps=3 format=3 uid="uid://battlescape"]

[ext_resource type="Script" path="res://scripts/states/battlescape_state.gd" id="1"]
[ext_resource type="Script" path="res://scripts/battlescape/battlescape_manager.gd" id="2"]

[node name="Battlescape" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BattlescapeManager" type="Node" parent="."]
script = ExtResource("2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
text = "BATTLESCAPE"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 36

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapBackground" type="ColorRect" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="TileContainer" type="Control" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SidePanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -200.0
offset_right = -10.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="TurnInfo" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="SidePanel/TurnInfo"]
layout_mode = 2
text = "TURN: 1"
horizontal_alignment = 1

[node name="ActiveUnitLabel" type="Label" parent="SidePanel/TurnInfo"]
layout_mode = 2
text = "ACTIVE UNIT: None"
horizontal_alignment = 1

[node name="TimeUnitsLabel" type="Label" parent="SidePanel/TurnInfo"]
layout_mode = 2
text = "TIME UNITS: 0"
horizontal_alignment = 1

[node name="UnitInfo" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitNameLabel" type="Label" parent="SidePanel/UnitInfo"]
layout_mode = 2
text = "UNIT INFO"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="UnitStatsLabel" type="Label" parent="SidePanel/UnitInfo"]
layout_mode = 2
text = "Health: 0/0
TU: 0/0
Position: (0,0)"
autowrap_mode = 3

[node name="ActionsPanel" type="VBoxContainer" parent="SidePanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionsLabel" type="Label" parent="SidePanel/ActionsPanel"]
layout_mode = 2
text = "ACTIONS"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="MoveButton" type="Button" parent="SidePanel/ActionsPanel"]
layout_mode = 2
text = "MOVE"

[node name="AttackButton" type="Button" parent="SidePanel/ActionsPanel"]
layout_mode = 2
text = "ATTACK"

[node name="EndTurnButton" type="Button" parent="SidePanel/ActionsPanel"]
layout_mode = 2
text = "END TURN"

[node name="BackButton" type="Button" parent="SidePanel/ActionsPanel"]
layout_mode = 2
text = "BACK TO GEOSCAPE"

[node name="BottomPanel" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="StatusLabel" type="Label" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Status: Ready"
vertical_alignment = 1

[node name="ObjectiveLabel" type="Label" parent="BottomPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "Objective: Eliminate all enemies"
horizontal_alignment = 2
vertical_alignment = 1
